Add OAuth2 state validation
Modelled after the GitHub plugin which has been tested already, adding CSRF protection.